Modify body and footer version 03.23.2025

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- WRITE CARTS MEATS -->
         <div class="groupM-Shakes">
             <div class="mofongos">
-                <div style="background-color: rgb(68, 68, 20);text-align:center;color:white;">MOFONGOS*</div>
+                <div style="background-color: rgb(68, 68, 20);text-align:center;color:white;padding: 5px;font-size: 25px;">MOFONGOS*</div>
                 <P>Mashed Green Plantains</P>
                 <p>Mofongo de Pollo Chicken <b>14.00</b></p>
                 <p>Mofongo de Cerdo Pork <b>15.00</b></p>
@@ -69,7 +69,7 @@
                 <p>Mofongo de Camarones Shrimp <b>22.00</b></p>
             </div>
             <div class="ShakesJuice">
-                <div style="background-color: rgb(68, 68, 20);text-align:center;color:white;">SHAKES & JUICE</div>
+                <div style="background-color: rgb(68, 68, 20);text-align:center;color:white;padding: 5px;font-size: 25px;">SHAKES & JUICE</div>
                 <p>Pina Pinneaple <b>5.00 9.00</b></p>
                 <p>Parcha Passion Fruit<b>5.00 9.00</b></p>
             </div>
@@ -131,6 +131,7 @@
             justify-content:space-between;
         }
     </style>
+
     <div class="footer">
         <div class="footerContainer">
             <div style="border: solid 2px white; padding: 10px;">
@@ -156,7 +157,6 @@
                 <div style="background-color: white;color:rgb(68, 68, 20);padding-left:30px;font-weight: bold;">Contact me</div>
                 <ul>
                     <li>045.050.0670</li>
-                   
                     <li>bestrestaurant@gmail.com</li>
                     <li>000 JEROME AV. BRONX, NY</li>
                 </ul>
