modify code html BlockSandwiches version 03.23.2025 6:14

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
                     <div><a href="#"><img style="width:250px;border: solid 2px rgb(68, 68, 20);" src="https://cdn.pixabay.com/photo/2023/04/02/21/38/sandwich-7895477_1280.jpg" alt="Sandwich, Egg salad sandwich, Lunch image. Free for use."></a></div>    
                     <h1 style="background-color: rgb(68, 68, 20);text-align:center;color:white;">SANDWICHES</h1>
                     <div> 
+                        <p style="display:flex;justify-content: space-between;padding-bottom:5px;">Bistec Steak <b>10.00</b></p>
+                        <p style="display:flex;justify-content: space-between;padding-bottom:5px;">Cubano Cuban Sandwich <b>10.00</b></p>
+                        <p style="display:flex;justify-content: space-between;padding-bottom:5px;">Permil Roasted Pork -Solo <b>10.00</b></p>
+                        <p style="display:flex;justify-content: space-between;padding-bottom:5px;">Jamon y Queso Ham and Cheese <b>6.00</b></p>
+                        <p style="display:flex;justify-content: space-between;padding-bottom:5px;">Tostadas Toast <b>1.50</b></p>
+                        <p style="display:flex;justify-content: space-between;padding-bottom:5px;">Pechuga de Pollo a la Plancha Grilled Chicken Breast<b>9.00</b></p>
+                       
                         <ul>
                             <li style="display:flex;justify-content: space-between;padding-bottom:5px;">Bistec Steak <b>10.00</b></li>
                             <li style="display:flex;justify-content: space-between;padding-bottom:5px;">Cubano Cuban Sandwich <b>10.00</b></li>
