modify firt version 4.12.2025 11:05

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- GROUP CARTS MEATS -->
         <div class="GroupCartsMeats">
             <div class="BlockWriteList">
-                <h1 class="TitleBackground">CARNES . MEATS</h1>
+                <h1 class="TitleBackground">CARNES . MEATS</h1><br>
                 <style>
                     table{
                         width: 100%;
@@ -32,6 +32,7 @@
                     table, tr, td {
                         border: solid 2px gray;
                         border-collapse: collapse;
+                        color:rgb(68, 68, 20);
                     }
                     td .td2{
                      
@@ -92,7 +93,7 @@
                         <td> <b>24.00</b></td>
                     </tr>
                     <tr>
-                        <td>* Churrasco </td>
+                        <td>Churrasco </td>
                         <td><b class="b-red">Skirt Steak</b></td> 
                         <td><b>30.00</b></td>
                     </tr>
@@ -213,9 +214,9 @@
                             <img style="width:250px;border: solid 2px rgb(68, 68, 20);" src="https://cdn.pixabay.com/photo/2019/02/16/21/14/sandwiches-4001015_1280.jpg" alt="Bacon, Egg and Cheese Breakfast Sandwich on a Toasted Bagel - Photographed on Hasselblad H3D2-39mb Camera"><br><br>
                             <img style="width:250px;border: solid 2px rgb(68, 68, 20);" src="https://cdn.pixabay.com/photo/2020/05/20/03/39/sandwich-5193350_1280.jpg" alt="Fried Bologna Sandwich with Melted Cheese and Fries-Photographed on Hasselblad H3D2-39mb Camera">
                         </div>
-                        <div style="padding:10px;">
+                        <div style="padding:10px;text-align: center;">
                             <p style="color: red;margin-top:0;font-weight: bold;">DESAYUNO HISPANO Y AMERICANO</p>
-                            <p>2 Huevos, Tocino y Papas Caceras o Fritas 10.00 <br><b style="color:red;font-weight: normal;">2 Eggs, Bacon & Homade Potato or French Fries</b></p>
+                            <p>2 Huevos, Tocino y Papas Caceras o Fritas 10.00 <br><b style="color:red;font-weight: normal;">2 Eggs, Bacon & Homade Potato or French Fries</b></p><br>
                             <p>Tres Golpes / <b style="color:red;font-weight: normal;">The Three Hits</b> <br> Mangu o Yuca O Guineitos O Name o Malanga (Yautia Coco) con Huevo Queso y Salami. <br><b style="color:red;font-weight: normal;">Mashed Green Plantains Cassava, Malanga with Eggs, Cheese and Salami.</b></p>
                             <p style="font-size:60px;font-weight: bold;text-align: center;color: rgb(68, 68, 20);margin-top:0;">$ 12.00</p>
                         </div>
@@ -229,13 +230,23 @@
                         </a>
                     </div>    
                     <h1 style="background-color: rgb(68, 68, 20);text-align:center;color:white;">SANDWICHES</h1>
+                    <style>
+                        .pSandwitches{
+                            display:flex;
+                            justify-content: space-between;margin:3px;
+                            border-top: solid 2px gray ;
+                        }
+                        .pSandwitches , b{
+                           color:rgb(68, 68, 20);
+                        }
+                    </style>
                     <div> 
-                        <p style="display:flex;justify-content: space-between;margin:3px;">Bistec Steak <b>10.00</b></p>
-                        <p style="display:flex;justify-content: space-between;margin:3px;">Cubano Cuban Sandwich <b>10.00</b></p>
-                        <p style="display:flex;justify-content: space-between;margin:3px;">Permil Roasted Pork -Solo <b>10.00</b></p>
-                        <p style="display:flex;justify-content: space-between;margin:3px;">Jamon y Queso Ham and Cheese <b>6.00</b></p>
-                        <p style="display:flex;justify-content: space-between;margin:3px;">Tostadas Toast <b>1.50</b></p>
-                        <p style="display:flex;justify-content: space-between;margin:3px;">Pechuga de Pollo a la Plancha Grilled Chicken Breast<b>9.00</b></p>
+                        <p class="pSandwitches">Bistec, Steak <b>10.00</b></p>
+                        <p class="pSandwitches">Cubano, Cuban Sandwich <b>10.00</b></p>
+                        <p class="pSandwitches">Permil, Roasted Pork -Solo <b>10.00</b></p>
+                        <p class="pSandwitches">Jamon y Queso, Ham and Cheese <b>6.00</b></p>
+                        <p class="pSandwitches">Tostadas, Toast <b>1.50</b></p>
+                        <p class="pSandwitches">Pechuga de Pollo a la Plancha, Grilled Chicken Breast<b>9.00</b></p>
                     </div>
                 </div>
 
